--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         .filters {
             margin-top: 10px;
             padding: 10px;
-            text-align: left;
+            text-align: center;
             padding-left: 10px;
         }
 
@@ -242,7 +242,7 @@
 
         .grid-item .original-price {
             text-decoration: line-through;
-            font-size: 12px;
+            font-size: 18px;
             color: #999;
             font-weight: normal;
             margin-left: 8px;
@@ -294,7 +294,7 @@
             <button data-filter=":not(.out-of-stock)">In Stock</button>
             <button id="toggle-price-sort" data-sort="default">Price <span id="price-sort-indicator">─</span></button>
         </div>
-        <div style="margin-top: 10px; text-align: left;">
+        <div style="margin-top: 10px;">
             <button id="clear-filters" style="background: none; border: none; color: black; font-weight: bold; text-decoration: underline; cursor: pointer;">Clear all</button>
         </div>
     </div>
@@ -329,7 +329,7 @@
                     <img class="default-image" src="Products/Bags/NonBrand/HeartEmbossed/HEMain.png">
                     <img class="hover-image" src="Products/Bags/NonBrand/HeartEmbossed/HEHover.jpg">
                 </div>
-                <div class="item-price">$49.99</div>
+                <div class="item-price">$49.99 <span class="original-price">$110</span></div>
                 <div class="item-desc">Heart Embossed Shoulder Bag</div>
             </a>
         </div>
@@ -340,7 +340,7 @@
                     <img class="default-image" src="Products/Bags/NonBrand/TheBucket/TBMain.png">
                     <img class="hover-image" src="Products/Bags/NonBrand/TheBucket/TBHover.jpg">
                 </div>
-                <div class="item-price">$49.99</div>
+                <div class="item-price">$49.99 <span class="original-price">$110</span></div>
                 <div class="item-desc">The Bucket Sack Bag</div>
             </a>
         </div>
