--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             }
 
             .grid {
-                padding: 10px;
+                padding: 300px;
                 grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
             }
 
@@ -274,8 +274,8 @@
             <img src="Branding/LL_Black_01.png" alt="Karry Kraze Logo">
         </div>
         <ul>
-            <li><a href="#">Depop</a></li>
-            <li><a href="#">Instagram</a></li>
+            <li><a href="https://www.depop.com/smojoyt/">Depop</a></li>
+            <li><a href="https://www.instagram.com/karrykraze/">Instagram</a></li>
         </ul>
     </nav>
     <div class="filters">
