--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         }
 
             .filters button {
+                color:black!important;
                 background: #f0f0f0;
                 border: none;
                 padding: 10px 16px;
