--- a/index.html
+++ b/index.html
@@ -265,8 +265,18 @@
 </head>
 <body>
 
-    <h1>Isotope - masonry fitWidth</h1>
-    <p>Grid centered</p>
+    <nav>
+        <div class="logo">
+            <a href="https://karrykraze.com">
+                <img src="Branding/LL_Black_01.png" alt="Karry Kraze Logo">
+            </a>
+
+        </div>
+        <ul>
+            <li><a href="https://www.depop.com/smojoyt/">Depop</a></li>
+            <li><a href="https://www.instagram.com/karrykraze/">Instagram</a></li>
+        </ul>
+    </nav>
 
     <div class="filters">
         <div class="top-sort">
@@ -287,9 +297,6 @@
         <div style="margin-top: 10px;">
             <button id="clear-filters" style="background: none; border: none; color: black; font-weight: bold; text-decoration: underline; cursor: pointer;">Clear all</button>
         </div>
-        <button data-filter="*">show all</button>
-        <button data-filter=".grid-item--height2">height 2</button>
-        <button data-filter=":not(.grid-item--height2)">height 1</button>
     </div>
 
     <div class="grid-wrapper">
