--- a/index.html
+++ b/index.html
@@ -17,6 +17,37 @@
             text-align: center;
             background: #f9f9f9;
         }
+        nav {
+            padding: 20px;
+        }
+
+            nav .logo {
+                display: inline-block;
+            }
+
+                nav .logo img {
+                    max-height: 60px;
+                    height: auto;
+                    width: auto;
+                }
+
+            nav ul {
+                margin-top: 10px;
+                list-style: none;
+                padding: 0;
+                display: flex;
+                gap: 30px;
+                justify-content: center;
+                flex-wrap: wrap;
+            }
+
+                nav ul li a {
+                    color: black;
+                    text-decoration: none;
+                    font-weight: bold;
+                    text-transform: uppercase;
+                    font-size: 14px;
+                }
 
         .grid-wrapper {
             text-align: center;
@@ -25,7 +56,6 @@
 
         .grid {
             display: inline-block;
-            background: #DDD;
             transition: 0.3s ease;
         }
 
@@ -49,17 +79,9 @@
             text-align: left;
         }
 
-            .grid-item img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                display: block;
-                transition: opacity 0.3s ease;
-            }
+            
 
-        .grid-item--height2 {
-            height: 200px;
-        }
+
 
         .filters {
             margin-top: 10px;
@@ -123,14 +145,6 @@
             background: #f39c12;
         }
 
-        .grid-item img {
-            width: 100%;
-            max-width: 300px;
-            object-fit: cover;
-            display: block;
-            transition: opacity 0.3s ease;
-        }
-
         .grid-item.out-of-stock img {
             opacity: 0.3;
         }
@@ -152,7 +166,6 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
             opacity: 0;
             object-fit: cover;
             transition: opacity 0.3s ease;
