--- a/index.html
+++ b/index.html
@@ -226,12 +226,12 @@
             }
 
             .grid {
-                max-width: 60vw
+                
             }
 
             .grid-item {
-                max-width: 27vw;
-                padding: 5px;
+                max-width: 150px;
+
             }
         }
 
