--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
         .grid-item {
             position: relative;
             float: left;
-            width: 300px;
             height: auto;
             border: none;
             overflow: hidden;
@@ -371,7 +370,7 @@
             layoutMode: 'masonry',
             masonry: {
                 columnWidth: 150,
-                isFitWidth: window.innerWidth > 768 ? true : false
+                isFitWidth: true
             },
             transitionDuration: '0.5s',
             stagger: 100,
