--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
+            height: auto;
             opacity: 0;
             object-fit: cover;
             transition: opacity 0.3s ease;
