--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
         .grid {
             display: inline-block;
+            color:black !important;
             transition: 0.3s ease;
         }
 
