--- a/index.html
+++ b/index.html
@@ -213,11 +213,10 @@
             }
 
             .grid {
-                max-width: 60vw
             }
 
             .grid-item {
-                max-width: 60vw;
+                max-width: 150px;
                 padding: 5px;
             }
         }
