--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         * {
             box-sizing: border-box;
         }
+        a {
+            color: black !important;
+            text-decoration: none !important;
+        }
+
 
         body, html {
             margin: 0;
