--- a/index.html
+++ b/index.html
@@ -22,6 +22,37 @@
             text-align: center;
             background: #f9f9f9;
         }
+        nav {
+            padding: 20px;
+        }
+
+            nav .logo {
+                display: inline-block;
+            }
+
+                nav .logo img {
+                    max-height: 60px;
+                    height: auto;
+                    width: auto;
+                }
+
+            nav ul {
+                margin-top: 10px;
+                list-style: none;
+                padding: 0;
+                display: flex;
+                gap: 30px;
+                justify-content: center;
+                flex-wrap: wrap;
+            }
+
+                nav ul li a {
+                    color: black;
+                    text-decoration: none;
+                    font-weight: bold;
+                    text-transform: uppercase;
+                    font-size: 14px;
+                }
 
         .grid-wrapper {
             text-align: center;
@@ -269,8 +300,18 @@
 </head>
 <body>
 
-    <h1>Isotope - masonry fitWidth</h1>
-    <p>Grid centered</p>
+    <nav>
+        <div class="logo">
+            <a href="https://karrykraze.com">
+                <img src="Branding/LL_Black_01.png" alt="Karry Kraze Logo">
+            </a>
+
+        </div>
+        <ul>
+            <li><a href="https://www.depop.com/smojoyt/">Depop</a></li>
+            <li><a href="https://www.instagram.com/karrykraze/">Instagram</a></li>
+        </ul>
+    </nav>
 
     <div class="filters">
         <div class="top-sort">
