--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         * {
             box-sizing: border-box;
         }
+
         a {
             color: black !important;
             text-decoration: none !important;
@@ -22,6 +23,7 @@
             text-align: center;
             background: #f9f9f9;
         }
+
         nav {
             padding: 20px;
         }
@@ -54,6 +56,57 @@
                     font-size: 14px;
                 }
 
+        .price-wrap {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-wrap: wrap; /* ✅ allows items to wrap to next line */
+            align-items: flex-end;
+            gap: 8px;
+            max-width: 100%; /* optional, helps for responsive wrapping */
+        }
+
+        .label {
+            font-weight: bold;
+            color: green;
+            font-size: 16px;
+        }
+
+        .discounted-price {
+            font-weight: bold;
+            font-size: 24px;
+            color: green;
+            display: inline-flex;
+            align-items: flex-start;
+            line-height: 1;
+        }
+
+            .discounted-price .currency {
+                font-size: 16px;
+                margin-right: 2px;
+                align-self: flex-start;
+                padding-top: 2px;
+            }
+
+            .discounted-price .dollars {
+                font-size: 28px;
+            }
+
+            .discounted-price .cents {
+                font-size: 14px;
+                align-self: flex-start;
+                padding-top: 4px;
+            }
+
+        .original-price {
+            color: #888;
+            text-decoration: line-through;
+            font-size: 18px;
+            flex-basis: 50%;
+        }
+
+
+
+
         .grid-wrapper {
             text-align: center;
             margin: auto 8vw;
@@ -61,7 +114,7 @@
 
         .grid {
             display: inline-block;
-            color:black !important;
+            color: black !important;
             transition: 0.3s ease;
         }
 
@@ -358,7 +411,17 @@
                         <img class="default-image" src="Products/Bags/NonBrand/Bitches/BMain.png">
                         <img class="hover-image" src="Products/Bags/NonBrand/Bitches/BHover.jpg">
                     </div>
-                    <div class="item-price">$49.99 <span class="original-price">$110</span></div>
+                    <div class="price-wrap">
+                        <span class="label">Now</span>
+                        <span class="discounted-price">
+                            <span class="currency">$</span>
+                            <span class="dollars">398</span>
+                            <span class="cents">00</span>
+                        </span>
+                        <span class="original-price">$598.00</span>
+                    </div>
+
+
                     <div class="item-desc">B!tch#$ is Weird Tote Bag</div>
                 </a>
             </div>
