--- a/index.html
+++ b/index.html
@@ -104,6 +104,77 @@
             flex-basis: 50%;
         }
 
+        .price-wrap {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: flex-end;
+            gap: 8px;
+            max-width: 100%;
+        }
+
+        .label {
+            font-weight: bold;
+            color: green;
+            font-size: 16px;
+        }
+
+        .discounted-price {
+            font-weight: bold;
+            font-size: 24px;
+            color: green;
+            display: inline-flex;
+            align-items: flex-start;
+            line-height: 1;
+        }
+
+            .discounted-price .currency {
+                font-size: 16px;
+                margin-right: 2px;
+                align-self: flex-start;
+                padding-top: 2px;
+            }
+
+            .discounted-price .dollars {
+                font-size: 28px;
+            }
+
+            .discounted-price .cents {
+                font-size: 14px;
+                align-self: flex-start;
+                padding-top: 4px;
+            }
+
+        .original-price {
+            color: #888;
+            text-decoration: line-through;
+            font-size: 18px;
+            flex-basis: 100%;
+        }
+
+        .savings-line {
+            display: flex;
+            align-items: center;
+            gap: 6px;
+            flex-basis: 100%;
+            margin-top: 4px;
+        }
+
+        .savings-label {
+            background-color: #eaf4e7;
+            color: green;
+            padding: 2px 6px;
+            border-radius: 3px;
+            font-size: 14px;
+            font-weight: bold;
+        }
+
+        .savings-amount {
+            color: green;
+            font-weight: bold;
+            font-size: 16px;
+        }
+
 
 
 
@@ -419,7 +490,13 @@
                             <span class="cents">00</span>
                         </span>
                         <span class="original-price">$598.00</span>
+
+                        <div class="savings-line">
+                            <span class="savings-label">You save</span>
+                            <span class="savings-amount">$200.00</span>
+                        </div>
                     </div>
+
 
 
                     <div class="item-desc">B!tch#$ is Weird Tote Bag</div>
