--- a/index.html
+++ b/index.html
@@ -389,9 +389,13 @@
             }
 
             .filters {
-                text-align: left;
+                font-size:11px;
                 padding-left: 1rem;
                 padding-right: 1rem;
+            }
+
+            .filters button {
+                padding: 5px 8px;
             }
 
             .grid {
