--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 
         </div>
         <ul>
-            <li><a href="https://www.depop.com/smojoyt/">Depop</a></li>
+            <li><a href="https://www.tiktok.com/@karrykraze">TikTok</a></li>
             <li><a href="https://www.instagram.com/karrykraze/">Instagram</a></li>
         </ul>
     </nav>
@@ -536,7 +536,7 @@
             </div>
 
             <!--Heart Embossed Bag-->
-            <div class="grid-item sale nb" data-price="33.99">
+            <div class="grid-item sale nb" data-price="34.99">
                 <a href="https://www.karrykraze.com/products/bags/Bag_MiniHeart" class="item-inner">
                     <div class="item-img">
                         <span class="sale-badge">SALE</span>
@@ -547,7 +547,7 @@
                         <span class="label">Now</span>
                         <span class="discounted-price">
                             <span class="currency">$</span>
-                            <span class="dollars">33</span>
+                            <span class="dollars">34</span>
                             <span class="cents">99</span>
                         </span>
                         <span class="original-price">$46.65</span>
