--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
             <div class="grid-item lv bestseller out-of-stock" data-price="144">
                 <a href="https://www.depop.com/products/smojoyt-luxury-monogram-crossbody-bag-5f9f/manage/" class="item-inner">
                     <div class="item-img">
-                        <span class="outofstock-badge">Out of Stock</span>
+                        <span class="outofstock-badge">Out</span>
                         <span class="bestseller-badge">Best Seller</span>
                         <img class="default-image" src="Products/Bags/LV/CrossBody1/CB1Main.png">
                         <img class="hover-image" src="Products/Bags/LV/CrossBody1/CB1Hover.jpg">
