--- a/index.html
+++ b/index.html
@@ -552,8 +552,34 @@
                 </a>
             </div>
 
+            <!--The Lv Croissant Bag-->
+            <div class="grid-item nb bestseller sale" data-price="24.99">
+                <a href="https://www.karrykraze.com/products/bags/bag_TheBucket" class="item-inner">
+                    <div class="item-img">
+                        <span class="sale-badge">SALE</span>
+                        <img class="default-image" src="Products/Bags/LV/Moon1/MB_1.png">
+                        <img class="hover-image" src="Products/Bags/LV/Moon1/MB_3.jpg">
+                    </div>
+                    <div class="price-wrap">
+                        <span class="label">Now</span>
+                        <span class="discounted-price">
+                            <span class="currency">$</span>
+                            <span class="dollars">299</span>
+                            <span class="cents">99</span>
+                        </span>
+                        <span class="original-price">$2490.00</span>
+
+                        <div class="savings-line">
+                            <span class="savings-label">You save</span>
+                            <span class="savings-amount">$2190.01</span>
+                        </div>
+                    </div>
+                    <div class="item-desc">Louis Vuitton Croissant Bag</div>
+                </a>
+            </div>
+
             <!--The Bucket Bag-->
-            <div class="grid-item nb sale" data-price="24.99">
+            <div class="grid-item lv sale" data-price="299.99">
                 <a href="https://www.karrykraze.com/products/bags/bag_TheBucket" class="item-inner">
                     <div class="item-img">
                         <span class="sale-badge">SALE</span>
