--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
             </div>
 
             <!--The Lv Croissant Bag-->
-            <div class="grid-item nb bestseller sale" data-price="24.99">
+            <div class="grid-item lv bestseller sale" data-price="24.99">
                 <a href="https://www.karrykraze.com/products/bags/bag_TheBucket" class="item-inner">
                     <div class="item-img">
                         <span class="sale-badge">SALE</span>
@@ -579,7 +579,7 @@
             </div>
 
             <!--The Bucket Bag-->
-            <div class="grid-item lv sale" data-price="299.99">
+            <div class="grid-item nb sale" data-price="299.99">
                 <a href="https://www.karrykraze.com/products/bags/bag_TheBucket" class="item-inner">
                     <div class="item-img">
                         <span class="sale-badge">SALE</span>
