--- a/index.html
+++ b/index.html
@@ -557,6 +557,7 @@
                 <a href="https://www.karrykraze.com/products/bags/bag_TheBucket" class="item-inner">
                     <div class="item-img">
                         <span class="sale-badge">SALE</span>
+                        <span class="bestseller-badge">Best Seller</span>
                         <img class="default-image" src="Products/Bags/LV/Moon1/MB_1.png">
                         <img class="hover-image" src="Products/Bags/LV/Moon1/MB_3.jpg">
                     </div>
